--- a/dockercompose.yml
+++ b/dockercompose.yml
@@ -1,11 +1,9 @@
-version: '3.8'
+version: "3.8"
 
 services:
   app:
-    image: sivanandhan/dev:application-1
-    restart: always
+    image: sivacloud001/dev:react-app1
     ports:
-      - "80:80"
+      - "3000:80"
     tty: true
     stdin_open: true
-
